--- a/package.json
+++ b/package.json
@@ -6,15 +6,73 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint {**/*,*}.{js,ts,jsx,tsx,html,vue} --fix",
+    "prettier": "prettier --write {**/*,*}.{vue,css,scss,less,json,js,ts,jsx,tsx,cjs}",
+    "prepare": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,vue,ts,jsx,tsx}": [
+      "npm run lint",
+      "npm run prettier"
+    ],
+    "*.{html,css,less,scss,md}": [
+      "npm run prettier"
+    ]
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "@element-plus/icons-vue": "^2.0.10",
+    "@vueuse/core": "^9.6.0",
+    "@vueuse/integrations": "^9.6.0",
+    "animate.css": "^4.1.1",
+    "axios": "^1.2.0",
+    "element-plus": "^2.2.25",
+    "js-md5": "^0.7.3",
+    "jsencrypt": "^3.3.1",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.0.26",
+    "pinia-plugin-persistedstate": "^3.0.0",
+    "qs": "^6.11.0",
+    "universal-cookie": "^4.0.4",
+    "vite-plugin-eslint": "^1.8.1",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@types/eslint": "^8.4.10",
+    "@types/js-md5": "^0.4.3",
+    "@types/node": "^18.11.9",
+    "@types/nprogress": "^0.2.0",
+    "@types/qs": "^6.9.7",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "@vitejs/plugin-vue": "^3.2.0",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.8.0",
+    "husky": "^8.0.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "lint-staged": "^13.0.4",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
-    "vue-tsc": "^1.0.9"
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-windicss": "^1.8.8",
+    "vue-tsc": "^1.0.9",
+    "windicss": "^3.5.6"
   }
 }
