--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,44 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "strict": true,
     "jsx": "preserve",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "strict": true,
+    "sourceMap": true,
+    "skipLibCheck": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "lib": ["ESNext", "DOM"],
-    "skipLibCheck": true,
-    "noEmit": true
+    "useDefineForClassFields": true,
+    "lib": ["esnext", "dom"],
+    "types": ["node", "vite/client"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "skipLibCheck": true,
+  "noImplicitAny": true,
+  "noImplicitThis": true,
+  "strictNullChecks": false,
+  "suppressImplicitAnyIndexErrors": true,
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["src/*"],
+    "@views/*": ["src/views/*"],
+    "@assets/*": ["src/assets/*"],
+    "@utils/*": ["src/utils/*"],
+    "@layout/*": ["src/layout"],
+    "@components/*": ["src/components/*"]
+  },
+  "exclude": ["node_modules"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "vite.config.ts"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
